--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.6.RELEASE</version>
+        <version>1.3.0.RELEASE</version>
     </parent>
 
     <dependencies>
@@ -109,6 +109,13 @@
             <groupId>com.qmino</groupId>
             <artifactId>miredot-annotations</artifactId>
             <version>1.3.1</version>
+        </dependency>
+
+        <!-- CSV Reader -->
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.3</version>
         </dependency>
 
     </dependencies>
