--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.grndctl</groupId>
     <artifactId>grndctl</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <pluginRepositories>
         <pluginRepository>
@@ -122,7 +122,6 @@
 
     <build>
         <plugins>
-
             <!--<plugin>-->
                 <!--<groupId>com.mycila</groupId>-->
                 <!--<artifactId>license-maven-plugin</artifactId>-->
@@ -177,7 +176,7 @@
                         <!--UHJvamVjdHxjb20uZ3JuZGN0bC5ncm5kY3RsfDIwMTYtMTAtMTZ8dHJ1ZSNNQ3dDRkExNEo5ZnRvbm5RVkJUOU56QW9QaElreEJ4OEFoUVRPU2xOc2NnSmJMQnQwUGZScUxVdmoybTB2QT09-->
                     <!--</licence>-->
                     <!--<output>-->
-                        <!--<title>GrndCtl/AvWx ${project.version}</title>-->
+                        <!--<title>grndctl v${project.version} - [an aviators api]</title>-->
                         <!--<html>-->
                             <!--<baseUrl>grndctl.herokuapp.com</baseUrl>-->
                             <!--<sections>-->
