--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,6 @@
     <artifactId>grndctl</artifactId>
     <version>1.0</version>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>miredot</id>
-            <name>MireDot Releases</name>
-            <url>http://nexus.qmino.com/content/repositories/miredot</url>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <repositories>
-        <repository>
-            <id>miredot</id>
-            <name>MireDot Releases</name>
-            <url>http://nexus.qmino.com/content/repositories/miredot</url>
-        </repository>
-    </repositories>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
@@ -104,11 +88,16 @@
             <version>3.1</version>
         </dependency>
 
-        <!-- MireDot Annotations -->
+        <!-- Swagger 2 -->
         <dependency>
-            <groupId>com.qmino</groupId>
-            <artifactId>miredot-annotations</artifactId>
-            <version>1.3.1</version>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.2.2</version>
         </dependency>
 
         <!-- CSV Reader -->
@@ -165,62 +154,6 @@
                         <!--</goals>-->
                     <!--</execution>-->
                 <!--</executions>-->
-            <!--</plugin>-->
-
-            <!--<plugin>-->
-                <!--<groupId>com.qmino</groupId>-->
-                <!--<artifactId>miredot-plugin</artifactId>-->
-                <!--<version>2.0.1</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>restdoc</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-                <!--<configuration>-->
-                    <!--<organizationId>c715bfc7-d9ec-49d2-9b4e-a0d9876e4425</organizationId>-->
-                    <!--<output>-->
-                        <!--<title>grndctl v${project.version} - [an aviators api]</title>-->
-                        <!--<html>-->
-                            <!--<baseUrl>grndctl.herokuapp.com</baseUrl>-->
-                            <!--<sections>-->
-                                <!--<strategy>singlepage</strategy>-->
-                            <!--</sections>-->
-                        <!--</html>-->
-                    <!--</output>-->
-                    <!--<restModel>-->
-                        <!--<restFramework>-->
-                            <!--<name>spring-mvc</name>-->
-                        <!--</restFramework>-->
-                        <!--<fieldVisibility>-->
-                            <!--<ALL>NON_PRIVATE</ALL>-->
-                            <!--<FIELD>ANY</FIELD>-->
-                        <!--</fieldVisibility>-->
-                        <!--<httpStatusCodes>-->
-                            <!--<httpStatusCode>-->
-                                <!--<httpCode>200</httpCode>-->
-                                <!--<document>always</document>-->
-                                <!--<defaultMessage>The Service Call Has Completed Successfully</defaultMessage>-->
-                            <!--</httpStatusCode>-->
-                            <!--<httpStatusCode>-->
-                                <!--<httpCode>400</httpCode>-->
-                                <!--<document>always</document>-->
-                                <!--<defaultMessage>Bad Request</defaultMessage>-->
-                            <!--</httpStatusCode>-->
-                            <!--<httpStatusCode>-->
-                                <!--<httpCode>401</httpCode>-->
-                                <!--<document>explicit: com.acme.exceptions.AuthorizationException</document>-->
-                                <!--<defaultMessage>The User Is Not Authorized To Use This Service</defaultMessage>-->
-                            <!--</httpStatusCode>-->
-                            <!--<httpStatusCode>-->
-                                <!--<httpCode>412</httpCode>-->
-                                <!--<document>put,post</document>-->
-                                <!--<defaultMessage>Invalid JSON Input</defaultMessage>-->
-                            <!--</httpStatusCode>-->
-                        <!--</httpStatusCodes>-->
-                    <!--</restModel>-->
-                <!--</configuration>-->
             <!--</plugin>-->
 
             <plugin>
