--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,19 @@
         <java.version>1.8</java.version>
         <start-class>com.grndctl.GrndCtl</start-class>
         <guava.version>18.0</guava.version>
+
+        <!-- Test Props -->
+        <icao.code>KDEN</icao.code>
+        <iata.code>DEN</iata.code>
+        <!-- This also sets the port in application.properties -->
+        <server.port>8888</server.port>
+
+        <!-- Pass the test props into the argLine property -->
+        <argLine>
+            -Dicao.code=${icao.code}
+            -Diata.code=${iata.code}
+            -Dserver.port=${server.port}
+        </argLine>
     </properties>
 
     <parent>
@@ -20,6 +33,19 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.3.0.RELEASE</version>
     </parent>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <configuration>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <dependencies>
         <!-- Logging -->
@@ -51,6 +77,13 @@
             </exclusions>
         </dependency>
         <!-- end::jetty[] -->
+
+        <!-- Spring Boot Starter Test -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>1.4.1.RELEASE</version>
+        </dependency>
 
         <!-- tag::actuator[] -->
         <dependency>
